working with overflow issue

--- a/Terminal/src/containers/Terminal/style.css
+++ b/Terminal/src/containers/Terminal/style.css
@@ -3,6 +3,7 @@
     height: 100%;
     background-color: #27292c;
     padding: 10px 20px 0 20px;
+    overflow: scroll;
 }
 
 .terminal-line {
